recent regulation msg

--- a/Views/Shared/_Layout3.cshtml
+++ b/Views/Shared/_Layout3.cshtml
@@ -46,7 +46,7 @@
                                 <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
                                
                                     <div class="nav-profile-text">
-                                        <p class="text-black">@User.Identity.Name</p>
+                                        <p class="text-black">@User.Identity?.Name</p>
                                     </div>
                                 </a>
                          
