--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
          
                         <p class="mb-1 text-black">
                    
-                        <i class="mdi mdi-account-tie"></i>  @User.Identity.Name
+                        <i class="mdi mdi-account-tie"></i>  @User.Identity?.Name
                         </p>
                     </a>
                 </>
@@ -237,7 +237,7 @@
         </div>
         <!-- page-body-wrapper ends -->
     </div>
-    </div>
+ 
     <!-- container-scroller -->
     <!-- plugins:js -->
     <script src="~/assets/vendors/js/vendor.bundle.base.js"></script>
